explicit http jdk modules for deb pkg